--- a/ocher.config
+++ b/ocher.config
@@ -1,5 +1,5 @@
 # One of: posix freebsd cygwin minwg kobo haiku
-OCHER_TARGET?=posix
+OCHER_TARGET?=kobo
 
 ## Build settings
 OCHER_MAJOR?=0
@@ -21,12 +21,13 @@ OCHER_TEXT?=1
 OCHER_HTML?=1
 
 ## Output devices
-OCHER_UI_FD?=1
-ifneq ($(OCHER_TARGET),minwg)
-    ifneq ($(OCHER_TARGET),haiku)
-        OCHER_UI_NCURSES?=1
-    endif
-endif
+OCHER_UI_FD?=0
+OCHER_UI_NCURSES?=0
+#ifneq ($(OCHER_TARGET),minwg)
+#    ifneq ($(OCHER_TARGET),haiku)
+#        OCHER_UI_NCURSES?=1
+#    endif
+#endif
 ifneq ($(OCHER_TARGET),cygwin)
     OCHER_UI_SDL?=1
 endif
