Shuffle third party code to prep for tinyxml

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "airbag_fd"]
 	path = airbag_fd
 	url = git@github.com:ccoffing/airbag_fd.git
+[submodule "third-party/tinyxml2"]
+	path = third-party/tinyxml2
+	url = git@github.com:leethomason/tinyxml2.git
