--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,17 +15,14 @@ if(NOT CMAKE_BUILD_TYPE)
 	set(CMAKE_BUILD_TYPE Debug)
 endif()
 message("build type ${CMAKE_BUILD_TYPE}")
-set(_CFLAGS_WARN "-Wall -Wextra -Wno-unused -Wno-multichar -Wwrite-strings -Wformat=2")
-set(_CFLAGS_REL  "-Os -DNDEBUG")
-set(_CFLAGS_DBG  "-O0 -DDEBUG")
+set(_CFLAGS_WARN "-Wall -Wextra -Wno-unused-parameter -Wno-multichar -Wwrite-strings -Wformat=2")
+set(CMAKE_C_FLAGS_RELEASE "-Os -DNDEBUG")
+set(CMAKE_C_FLAGS_DEBUG   "-O0 -DDEBUG")
 set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} ${_CFLAGS_WARN}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${_CFLAGS_WARN} -fno-rtti")
 if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
 	set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} ${_CFLAGS_DBG}")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${_CFLAGS_DBG}")
-else()
-	set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} ${_CFLAGS_REL}")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${_CFLAGS_REL}")
 endif()
 
 #
@@ -37,11 +34,6 @@ set(THIRD_PARTY_DIR "${ROOT_DIR}/third-party")
 #
 # Global variables
 #
-set(GLOBAL_PROJ )
-
-# TODO: only if not cross-compiling
-enable_testing()
-
 
 #
 # Features
@@ -54,6 +46,10 @@ enable_testing()
 
 include(${ROOT_DIR}/cmake/config.cmake)
 #include(${ROOT_DIR}/features/xxx)
+
+if(NOT CMAKE_CROSSCOMPILING)
+enable_testing()
+endif()
 
 add_subdirectory(third-party/mxml)
 add_subdirectory(third-party/zlib)
