Fix multiple issues found by cppcheck

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@
 
 cmake_minimum_required(VERSION 2.8.12)
 
+project(ocherbook)
+set(ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
+list(APPEND CMAKE_MODULE_PATH "${ROOT_DIR}/cmake")
+
 #
 # Global compiler flags
 #
@@ -17,7 +21,9 @@ endif()
 message("build type ${CMAKE_BUILD_TYPE}")
 set(_CFLAGS_WARN "-Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wformat")
 set(CMAKE_C_FLAGS_RELEASE "-Os -DNDEBUG")
-set(CMAKE_C_FLAGS_DEBUG   "-O0 -DDEBUG")
+set(CMAKE_C_FLAGS_DEBUG   "-g -O0 -DDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE "-Os -DNDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG   "-g -O0 -DDEBUG")
 set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} ${_CFLAGS_WARN}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${_CFLAGS_WARN} -std=c++11")
 if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
@@ -28,7 +34,6 @@ endif()
 #
 # Global paths
 #
-set(ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
 set(THIRD_PARTY_DIR "${ROOT_DIR}/third-party")
 
 #
