Parameterize Doxyfile and versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(third-party/libev)
 add_subdirectory(third-party/mxml)
 add_subdirectory(third-party/zlib)
 add_subdirectory(ocher)
+add_subdirectory(doc)
