tidy cmake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,40 @@
 cmake_minimum_required(VERSION 3.1)
 
 if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
-	message(FATAL_ERROR "In-source builds are strongly discouraged.")
-endif()
-if(NOT CMAKE_BUILD_TYPE)
-	set(CMAKE_BUILD_TYPE Debug)
+    message(FATAL_ERROR "In-source builds are not supported.")
 endif()
 if(NOT OCHER_TOOLCHAIN_ROOT)
-	set(OCHER_TOOLCHAIN_ROOT /toolchains)
+    set(OCHER_TOOLCHAIN_ROOT "${CMAKE_SOURCE_DIR}/toolchains")
 endif()
 
 project(ocher VERSION 0.1.0 LANGUAGES CXX C)
 
-include(cmake/config.cmake)
-include(cmake/build-flags.cmake)
+include(cmake_options.cmake)
+
+set(_CFLAGS_WARN "-Wall -Wextra -Wnon-virtual-dtor -Wno-unused-parameter -Wwrite-strings -Wformat -Wno-c++1z-compat")
+set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} ${_CFLAGS_WARN}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${_CFLAGS_WARN}")
+set(CMAKE_C_FLAGS_DEBUG     "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 
 if(NOT CMAKE_CROSSCOMPILING)
-	enable_testing()
+    enable_testing()
 endif()
 
-add_subdirectory(third-party/Signals)
-add_subdirectory(third-party/catch)
-add_subdirectory(third-party/freetype)
-add_subdirectory(third-party/json)
-add_subdirectory(third-party/libev)
-add_subdirectory(third-party/mxml)
-add_subdirectory(third-party/zlib)
+if(AIRBAG_FD)
+    add_subdirectory(subprojects/airbag_fd)
+endif()
+add_subdirectory(subprojects/Signals)
+add_subdirectory(subprojects/json)
+add_subdirectory(subprojects/zlib)
+add_subdirectory(subprojects/libev)
+add_subdirectory(subprojects/mxml)
+add_subdirectory(subprojects/freetype)
+if(SDL)
+    add_subdirectory(subprojects/sdl)
+    set(UX_FB TRUE)
+    set(UX_FB_SDL TRUE)
+endif()
+add_subdirectory(subprojects/catch)
 add_subdirectory(ocher)
 add_subdirectory(doc)
