Improve support for cross-compiling from Meson.
Still missing wraps for mxml and freetype.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,13 +21,14 @@ if(NOT CMAKE_CROSSCOMPILING)
     enable_testing()
 endif()
 
+add_subdirectory(subprojects/catch)
+add_subdirectory(subprojects/Signals)
+add_subdirectory(subprojects/json)
 if(AIRBAG_FD)
     add_subdirectory(subprojects/airbag_fd)
 endif()
-add_subdirectory(subprojects/Signals)
-add_subdirectory(subprojects/json)
-add_subdirectory(subprojects/zlib)
-add_subdirectory(subprojects/libev)
+include(subprojects/zlib.cmake)
+include(subprojects/libev.cmake)
 add_subdirectory(subprojects/mxml)
 add_subdirectory(subprojects/freetype)
 if(SDL)
@@ -35,6 +36,5 @@ if(SDL)
     set(UX_FB TRUE)
     set(UX_FB_SDL TRUE)
 endif()
-add_subdirectory(subprojects/catch)
 add_subdirectory(ocher)
 add_subdirectory(doc)
