--- a/subprojects/Signals/meson.build
+++ b/subprojects/Signals/meson.build
@@ -1,4 +1,7 @@
-project('Signals', 'cpp')
+project('Signals', 'cpp',
+    license : 'MIT',
+    default_options : ['cpp_std=c++11'])
 
 inc = include_directories('.')
+
 Signals_dep = declare_dependency(include_directories : inc)
