--- a/subprojects/json/meson.build
+++ b/subprojects/json/meson.build
@@ -1,4 +1,8 @@
-project('json', 'cpp')
+project('json', 'cpp',
+    version : '1.1.0',
+    license : 'MIT',
+    default_options : ['cpp_std=c++11'])
 
 inc = include_directories('.')
+
 json_dep = declare_dependency(include_directories : inc)
