Add Meson wrap for mxml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ if(AIRBAG_FD)
 endif()
 include(subprojects/zlib.cmake)
 include(subprojects/libev.cmake)
-add_subdirectory(subprojects/mxml)
+include(subprojects/mxml.cmake)
 add_subdirectory(subprojects/freetype)
 if(SDL)
     add_subdirectory(subprojects/sdl)
