--- a/ocher/CMakeLists.txt
+++ b/ocher/CMakeLists.txt
@@ -129,7 +129,8 @@ if(FMT_JPEG)
     )
 endif()
 
-string(REPLACE "." ";" OCHER_VERSIONS ${PROJECT_VERSION})
+set(OCHER_VERSION "${PROJECT_VERSION}")
+string(REPLACE "." ";" OCHER_VERSIONS "${OCHER_VERSION}")
 list(GET OCHER_VERSIONS 0 OCHER_MAJOR)
 list(GET OCHER_VERSIONS 1 OCHER_MINOR)
 list(GET OCHER_VERSIONS 2 OCHER_PATCH)
