--- a/doc/meson.build
+++ b/doc/meson.build
@@ -1,8 +1,17 @@
 doxygen = find_program('doxygen', required : false)
 if doxygen.found()
-    configure_file(input : 'Doxyfile.in',
-                   output : 'Doxyfile',
-                   configuration : conf_data)
-    # TODO
-    # run_target('docs', 'doxygen', meson.current_build_dir() + '/Doxyfile')
+    doxyfile = configure_file(
+        input : 'Doxyfile.in',
+        output : 'Doxyfile',
+        configuration : conf_data,
+        install : false)
+
+    datadir = join_paths(get_option('datadir'), 'doc', 'ocher')
+
+    docs = custom_target('docs',
+        input : doxyfile,
+        output : 'html',
+        command : [doxygen, doxyfile],
+        install : true,
+        install_dir : datadir)
 endif
