--- a/subprojects/wraps/zlib-1.2.11/meson.build
+++ b/subprojects/wraps/zlib-1.2.11/meson.build
@@ -21,7 +21,7 @@ src = files([
     'gzwrite.c',
 ])
 
-zlib = library('z', src,
+zlib = static_library('z', src,
     c_args : ['-Wno-implicit-function-declaration']
 )
 
