--- a/ocher/cmake_config.h.in
+++ b/ocher/cmake_config.h.in
@@ -5,6 +5,10 @@
 #define OCHER_MINOR @OCHER_MINOR@
 #define OCHER_PATCH @OCHER_PATCH@
 
+#if defined(NDEBUG) || !defined(DEBUG)
+#define DOCTEST_CONFIG_DISABLE
+#endif
+
 #cmakedefine AIRBAG_FD
 #cmakedefine FMT_EPUB
 #cmakedefine FMT_HTML
