Working on a real set of UI widgets.
- All widgets now sit on the FbScreen (not directly on the FrameBuffer) and share its event loop.
- Button emits events

--- a/ocher/CMakeLists.txt
+++ b/ocher/CMakeLists.txt
@@ -48,11 +48,18 @@ list(APPEND LIB_SOURCES
     util/StrUtil.h
     util/intrinsics.h
     ux/Activity.cpp
+    ux/Activity.h
     ux/Controller.cpp
+    ux/Controller.h
     ux/Event.cpp
+    ux/Event.h
     ux/Pagination.cpp
+    ux/Pagination.h
     ux/PowerSaver.cpp
+    ux/PowerSaver.h
     ux/Renderer.cpp
+    ux/Renderer.h
+    ux/Types.h
 )
 if(UX_FD)
     list(APPEND LIB_SOURCES
